--- a/check_accuracy.ipynb
+++ b/check_accuracy.ipynb
@@ -16,13 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import argparse\n",
     "from capsule_network import CapsuleNet, CapsuleLoss\n",
-    "import torch"
+    "import torch\n",
+    "from torch.autograd import Variable\n",
+    "import torchnet as tnt\n",
+    "from torch.optim import Adam\n",
+    "from torchnet.engine import Engine\n",
+    "from torchnet.logger import VisdomPlotLogger, VisdomLogger\n",
+    "from torchvision.utils import make_grid\n",
+    "from torchvision.datasets.mnist import MNIST\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -34,18 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'torch' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-eabec44351ec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mBATCH_SIZE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mNUM_CLASSES\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
      ]
     }
    ],
@@ -57,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,14 +126,7 @@
    ],
    "source": [
     "print(\"start\")\n",
-    "from torch.autograd import Variable\n",
-    "from torch.optim import Adam\n",
-    "from torchnet.engine import Engine\n",
-    "from torchnet.logger import VisdomPlotLogger, VisdomLogger\n",
-    "from torchvision.utils import make_grid\n",
-    "from torchvision.datasets.mnist import MNIST\n",
-    "from tqdm import tqdm\n",
-    "import torchnet as tnt\n",
+    "\n",
     "print(\"capsulenet\")\n",
     "model = CapsuleNet()\n",
     "model.load_state_dict(torch.load('epochs/epoch_500.pt'))\n",
@@ -183,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
