finished upper bound method, now need to condense inside the jupyter notebook

--- a/bab_runner.ipynb
+++ b/bab_runner.ipynb
@@ -160,9 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 10, 784])\n"
+     ]
+    }
+   ],
    "source": [
     "domain=domain_raw.view(2,batch_size,-1)\n",
     "print(domain.size())"
@@ -170,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([10, 784])\n"
+      "torch.Size([784])\n"
      ]
     }
    ],
@@ -187,27 +195,27 @@
     "\n",
     "#we try get_upper_bound\n",
     "nb_samples = 1024\n",
-    "nb_inp = domain.size()[1:]#get last dimensions\n",
+    "nb_inp = domain.size()[2:]#get last dimensions\n",
     "print(nb_inp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1024, 10, 784]\ntorch.Size([1024, 10, 784])\ntorch.Size([1024, 10, 784])\n"
+      "[10, 1024, 784]\ntorch.Size([10, 1024, 784])\ntorch.Size([10, 1024, 784])\n"
      ]
     }
    ],
    "source": [
     "# Not a great way of sampling but this will be good enough\n",
     "# We want to get rows that are >= 0\n",
-    "rand_samples_size=[nb_samples]+ list(nb_inp)\n",
+    "rand_samples_size=[batch_size,nb_samples]+ list(nb_inp)\n",
     "print(rand_samples_size)\n",
     "rand_samples = torch.zeros(rand_samples_size)\n",
     "print(rand_samples.size())\n",
@@ -219,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -259,70 +267,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 10, 784])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "domain_lb.view([1]+ list(nb_inp)).size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1024, 10, 784])\n"
+      "torch.Size([10, 1, 784])\ntorch.Size([10, 1, 784])\n"
      ]
     }
    ],
    "source": [
-    "domain_lb = domain_lb.view([1]+ list(nb_inp)).expand([nb_samples]+ list(nb_inp))#expand the initial point for the number of examples\n",
+    "print(domain_lb.view([batch_size,1]+ list(nb_inp)).size())\n",
+    "print(domain_width.view([batch_size,1]+ list(nb_inp)).size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10, 1024, 784])\n"
+     ]
+    }
+   ],
+   "source": [
+    "domain_lb = domain_lb.view([batch_size,1]+ list(nb_inp)).expand([batch_size,nb_samples]+ list(nb_inp))#expand the initial point for the number of examples\n",
     "print (domain_lb.size())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1024, 10, 784])\n"
+      "torch.Size([10, 1024, 784])\n"
      ]
     }
    ],
    "source": [
-    "domain_width = domain_width.view([1]+ list(nb_inp)).expand([nb_samples]+ list(nb_inp))#expand the width for the number of examples\n",
+    "domain_width = domain_width.view([batch_size,1]+ list(nb_inp)).expand([batch_size,nb_samples]+ list(nb_inp))#expand the width for the number of examples\n",
     "print(domain_width.size())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1024, 10, 784])\ntorch.Size([1024, 10, 784])\n"
+      "torch.Size([10, 1024, 784])\ntorch.Size([10, 1024, 784])\n"
      ]
     }
    ],
@@ -334,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1024, 10, 784])\n[10240, 784]\n"
+      "torch.Size([10, 1024, 784])\n[10240, 784]\n"
      ]
     }
    ],
@@ -356,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -376,84 +382,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([10240, 1, 28, 28])\n"
+      "torch.Size([10240, 1, 28, 28])\ntorch.Size([10, 1024, 784])\n"
      ]
     }
    ],
    "source": [
     "var_inps = torch.Tensor(inps).view(examples_data_size)\n",
-    "print(var_inps.size())#should match data_size"
+    "print(var_inps.size())#should match data_size\n",
+    "print(inps.size())\n",
+    "# print(inps[0][0])\n",
+    "# print(inps[0][1])\n",
+    "# print(var_inps[0][0])\n",
+    "# print(var_inps[1][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([10240, 10])\n"
+      "torch.Size([10240, 10])\ntensor([-1.6408e+01, -1.5531e+01, -1.2938e+01, -9.0602e+00, -2.0640e+01,\n        -1.8037e+01, -3.0886e+01, -1.2112e-04, -1.4306e+01, -1.3569e+01],\n       device='cuda:0', grad_fn=<SelectBackward>)\ntensor([-1.6407e+01, -1.5530e+01, -1.2938e+01, -9.0596e+00, -2.0640e+01,\n        -1.8037e+01, -3.0886e+01, -1.2112e-04, -1.4306e+01, -1.3568e+01],\n       device='cuda:0', grad_fn=<SelectBackward>)\n"
      ]
     }
    ],
    "source": [
     "outs = model.forward(var_inps.cuda())#gets the input for the values\n",
-    "print(outs.size())"
+    "print(outs.size())\n",
+    "print(outs[0])#those two should be very similar but different because they belong to two different random examples\n",
+    "print(outs[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([10240])\ntorch.Size([10240])\ntorch.Size([1024, 10])\n"
+      "tensor([[7],\n        [2],\n        [1],\n        [0],\n        [4],\n        [1],\n        [4],\n        [9],\n        [5],\n        [9]])\ntorch.Size([10, 1024])\ntensor([[7, 7, 7,  ..., 7, 7, 7],\n        [2, 2, 2,  ..., 2, 2, 2],\n        [1, 1, 1,  ..., 1, 1, 1],\n        ...,\n        [9, 9, 9,  ..., 9, 9, 9],\n        [5, 5, 5,  ..., 5, 5, 5],\n        [9, 9, 9,  ..., 9, 9, 9]])\n"
      ]
     }
    ],
    "source": [
-    "upper_bound, idx = torch.min(outs.data, dim=1)#this returns the distance of the network output from the given class, it selects the class which is furthest from the current one\n",
+    "print(target.unsqueeze(1))\n",
+    "target_expanded=target.unsqueeze(1).expand([batch_size,nb_samples])#generates nb_samples copies of the target vector, all rows should be the same\n",
+    "print(target_expanded.size())\n",
+    "print(target_expanded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10240])\ntorch.Size([10240, 10])\ntorch.Size([10])\ntorch.Size([10240, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "target_idxs=target_expanded.contiguous().view(batch_size*nb_samples)#contains a list of indices that tells which columns out of the 10 classes to pick\n",
+    "print(target_idxs.size()) #the first dimension should match\n",
+    "print(outs.size())\n",
+    "print(outs[target_idxs[0]].size())\n",
+    "outs_true_class=outs.gather(1,target_idxs.cuda().view(-1,1))#we choose dimension 1 because it's the one we want to reduce\n",
+    "print(outs_true_class.size())\n",
+    "# print(outs[0])\n",
+    "# print(target_idxs[1])\n",
+    "# print(outs[1][0])#these two should be similar but different because they belong to different examples\n",
+    "# print(outs[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10240, 1])\ntorch.Size([10, 1024])\ntorch.Size([10])\ntorch.Size([10])\ntensor([  0,   0,  61,   0,   0, 384, 272, 384, 233,  64], device='cuda:0')\ntensor([-1.2112e-04,  0.0000e+00, -3.4809e-04, -3.0518e-05, -1.7262e-04,\n        -1.3924e-04, -3.4475e-03, -6.1989e-04, -4.0445e-03, -1.1921e-04],\n       device='cuda:0', grad_fn=<MinBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(outs_true_class.size())\n",
+    "outs_true_class_resized=outs_true_class.view(batch_size,nb_samples)\n",
+    "print(outs_true_class_resized.size())#resize outputs so that they each row is a different element of each batch\n",
+    "upper_bound, idx = torch.min(outs_true_class_resized, dim=1)#this returns the distance of the network output from the given class, it selects the class which is furthest from the current one\n",
     "print(upper_bound.size())\n",
     "print(idx.size())\n",
-    "rearranged_idx=idx.view(list(inps.size()[0:2]))\n",
-    "print(rearranged_idx.size()) #rearranged idx contains the indexes of the minimum class for each example, for each element of the batch"
+    "print(idx)\n",
+    "print(upper_bound)\n",
+    "# rearranged_idx=idx.view(list(inps.size()[0:2]))\n",
+    "# print(rearranged_idx.size()) #rearranged idx contains the indexes of the minimum class for each example, for each element of the batch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "inps size torch.Size([1024, 10, 784])\n",
-      "idx size torch.Size([10240])\n",
-      "torch.Size([1024, 10, 10, 784])\n",
-      "torch.Size([1024, 10, 10, 784])\n"
+      "idx size torch.Size([10])\ninps size torch.Size([10, 1024, 784])\ntensor(0, device='cuda:0')\nsingle size torch.Size([784])\nsingle size torch.Size([784])\nsingle size torch.Size([784])\ntensor([[-0.4245, -0.4235, -0.4236,  ..., -0.4237, -0.4250, -0.4233],\n        [-0.4243, -0.4248, -0.4237,  ..., -0.4252, -0.4241, -0.4250],\n        [-0.4246, -0.4239, -0.4235,  ..., -0.4238, -0.4245, -0.4247],\n        ...,\n        [-0.4238, -0.4246, -0.4236,  ..., -0.4245, -0.4239, -0.4235],\n        [-0.4246, -0.4242, -0.4248,  ..., -0.4247, -0.4243, -0.4235],\n        [-0.4238, -0.4242, -0.4245,  ..., -0.4250, -0.4246, -0.4242]])\ntorch.Size([10, 784])\n"
      ]
     }
    ],
    "source": [
-    "print(f'inps size {inps.size()}')\n",
     "print(f'idx size {idx.size()}')\n",
-    "print(inps[rearranged_idx].size())\n",
+    "print(f'inps size {inps.size()}')\n",
+    "print(idx[0])\n",
     "# upper_bound = upper_bound[0]\n",
-    "ub_point = inps[rearranged_idx]#get the input that generated the minimum response for each class\n",
-    "print(ub_point.size())"
+    "unsqueezed_idx=idx.cuda().view(-1,1)\n",
+    "print(f'single size {inps[0][unsqueezed_idx[0][0]][:].size()}')\n",
+    "print(f'single size {inps[1][unsqueezed_idx[1][0]][:].size()}')\n",
+    "print(f'single size {inps[2][unsqueezed_idx[2][0]][:].size()}')\n",
+    "ub_point = [inps[x][idx[x]][:].numpy() for x in range(idx.size()[0])]\n",
+    "ub_point = torch.tensor(ub_point)\n",
+    "print(ub_point)#ub_point represents the input that amongst all examples returns the minimum response for the appropriate class\n",
+    "print(ub_point.size())\n",
+    "# print(unsqueezed_idx.size())\n",
+    "# ub_point = torch.gather(inps.cuda(),1,unsqueezed_idx.cuda())#todo for some reason it doesn't want to work\n",
+    "# print(ub_point.size())"
    ]
   },
   {
