added sequential version of the mnist neural network

--- a/bab_runner.ipynb
+++ b/bab_runner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "{'CodeCell': {'cm_config': {'autoCloseBrackets': False}}}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,14 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data size:torch.Size([10, 1, 28, 28])\ndomain size:torch.Size([2, 10, 1, 28, 28])\n"
+      "data size:torch.Size([10, 1, 28, 28])\n",
+      "domain size:torch.Size([2, 10, 1, 28, 28])\n"
      ]
     }
    ],
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,36 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([784])\n[10, 1024, 784]\ntorch.Size([10, 1024, 784])\ntorch.Size([10, 1024, 784])\ntorch.Size([10, 784])\ntorch.Size([10, 784])\ntorch.Size([10, 784])\ntorch.Size([10, 1, 784])\ntorch.Size([10, 1, 784])\ntorch.Size([10, 1024, 784])\ntorch.Size([10, 1024, 784])\ntorch.Size([10, 1024, 784])\ntorch.Size([10, 1024, 784])\ntorch.Size([10, 1024, 784])\n[10240, 784]\ntorch.Size([10, 1, 28, 28])\n[10240, 1, 28, 28]\ntorch.Size([10240, 1, 28, 28])\ntorch.Size([10, 1024, 784])\ntorch.Size([10240, 10])\ntensor([-1.6408e+01, -1.5530e+01, -1.2936e+01, -9.0587e+00, -2.0639e+01,\n        -1.8038e+01, -3.0886e+01, -1.2112e-04, -1.4305e+01, -1.3569e+01],\n       device='cuda:0', grad_fn=<SelectBackward>)\ntensor([-1.6407e+01, -1.5529e+01, -1.2936e+01, -9.0581e+00, -2.0639e+01,\n        -1.8038e+01, -3.0886e+01, -1.2112e-04, -1.4304e+01, -1.3568e+01],\n       device='cuda:0', grad_fn=<SelectBackward>)\ntensor([[7],\n        [2],\n        [1],\n        [0],\n        [4],\n        [1],\n        [4],\n        [9],\n        [5],\n        [9]])\ntorch.Size([10, 1024])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[7, 7, 7,  ..., 7, 7, 7],\n        [2, 2, 2,  ..., 2, 2, 2],\n        [1, 1, 1,  ..., 1, 1, 1],\n        ...,\n        [9, 9, 9,  ..., 9, 9, 9],\n        [5, 5, 5,  ..., 5, 5, 5],\n        [9, 9, 9,  ..., 9, 9, 9]])\ntorch.Size([10240])\ntorch.Size([10240, 10])\ntorch.Size([10])\ntorch.Size([10240, 1])\ntorch.Size([10240, 1])\ntorch.Size([10, 1024])\ntorch.Size([10])\ntorch.Size([10])\ntensor([  0,   0, 570,   0,  48, 724, 827, 624,  23,  96], device='cuda:0')\ntensor([-1.2112e-04,  0.0000e+00, -3.4809e-04, -3.0518e-05, -1.7262e-04,\n        -1.3924e-04, -3.4504e-03, -6.1989e-04, -4.0483e-03, -1.1921e-04],\n       device='cuda:0', grad_fn=<MinBackward0>)\nidx size torch.Size([10])\ninps size torch.Size([10, 1024, 784])\ntensor(0, device='cuda:0')\nsingle size torch.Size([784])\nsingle size torch.Size([784])\nsingle size torch.Size([784])\ntensor([[-0.4248, -0.4245, -0.4237,  ..., -0.4246, -0.4240, -0.4233],\n        [-0.4237, -0.4250, -0.4249,  ..., -0.4247, -0.4239, -0.4235],\n        [-0.4251, -0.4240, -0.4234,  ..., -0.4233, -0.4243, -0.4238],\n        ...,\n        [-0.4248, -0.4237, -0.4237,  ..., -0.4246, -0.4235, -0.4233],\n        [-0.4234, -0.4244, -0.4246,  ..., -0.4245, -0.4244, -0.4251],\n        [-0.4245, -0.4237, -0.4239,  ..., -0.4249, -0.4236, -0.4249]])\ntorch.Size([10, 784])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[-0.4248, -0.4245, -0.4237,  ..., -0.4246, -0.4240, -0.4233],\n         [-0.4237, -0.4250, -0.4249,  ..., -0.4247, -0.4239, -0.4235],\n         [-0.4251, -0.4240, -0.4234,  ..., -0.4233, -0.4243, -0.4238],\n         ...,\n         [-0.4248, -0.4237, -0.4237,  ..., -0.4246, -0.4235, -0.4233],\n         [-0.4234, -0.4244, -0.4246,  ..., -0.4245, -0.4244, -0.4251],\n         [-0.4245, -0.4237, -0.4239,  ..., -0.4249, -0.4236, -0.4249]]),\n tensor([-1.2112e-04,  0.0000e+00, -3.4809e-04, -3.0518e-05, -1.7262e-04,\n         -1.3924e-04, -3.4504e-03, -6.1989e-04, -4.0483e-03, -1.1921e-04],\n        device='cuda:0', grad_fn=<MinBackward0>))"
-      ]
-     },
-     "execution_count": 186,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#test the method\n",
     "get_upper_bound(domain)"
@@ -327,53 +301,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'gurobipy'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-188-97ec3e8e66ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#now try to do the lower bound\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mgurobipy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mgrb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'gurobipy'"
-     ],
-     "output_type": "error"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#now try to do the lower bound\n",
-    "# import gurobipy as grb"
+    "import gurobipy as grb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "input_domain: Tensor containing in each row the lower and upper bound\n",
+    "              for the corresponding dimension\n",
+    "'''\n",
+    "lower_bounds = []\n",
+    "upper_bounds = []\n",
+    "gurobi_vars = []\n",
+    "# These three are nested lists. Each of their elements will itself be a\n",
+    "# list of the neurons after a layer.\n",
+    "\n",
+    "gurobi_model = grb.Model()\n",
+    "gurobi_model.setParam('OutputFlag', False)\n",
+    "gurobi_model.setParam('Threads', 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([10, 1, 28, 28])\n",
-      "torch.Size([10])\n",
-      "tensor([7, 2, 1, 0, 4, 1, 4, 9, 5, 9], device='cuda:0')\n",
-      "7\n"
+      "torch.Size([2, 784])\n"
      ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'VerificationNetwork' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-118-a67be0a9b2ef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0msingle_true_class\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrue_class\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msingle_true_class\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mverification_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mVerificationNetwork\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m28\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msingle_true_class\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mverification_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'VerificationNetwork' is not defined"
-     ],
-     "output_type": "error"
     }
    ],
+   "source": [
+    "input_domain=domain.select(1,0)#we use a single domain, not ready for parallelisation yet\n",
+    "print(input_domain.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Do the input layer, which is a special case\n",
+    "inp_lb = []\n",
+    "inp_ub = []\n",
+    "inp_gurobi_vars = []\n",
+    "for dim in range(input_domain.size()[1]):\n",
+    "    ub=input_domain[0][dim]\n",
+    "    lb=input_domain[1][dim]\n",
+    "    v = gurobi_model.addVar(lb=lb, ub=ub, obj=0,\n",
+    "                          vtype=grb.GRB.CONTINUOUS,\n",
+    "                          name=f'inp_{dim}')\n",
+    "    inp_gurobi_vars.append(v)\n",
+    "    inp_lb.append(lb)\n",
+    "    inp_ub.append(ub)\n",
+    "gurobi_model.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lower_bounds.append(inp_lb)\n",
+    "upper_bounds.append(inp_ub)\n",
+    "gurobi_vars.append(inp_gurobi_vars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#now i need to list each layer in the model\n",
+    "layers = []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "## Do the other layers, computing for each of the neuron, its upper\n",
+    "## bound and lower bound\n",
+    "layer_idx = 1\n",
+    "for layer in self.layers:\n",
+    "    new_layer_lb = []\n",
+    "    new_layer_ub = []\n",
+    "    new_layer_gurobi_vars = []\n",
+    "    if type(layer) is nn.Linear:\n",
+    "        for neuron_idx in range(layer.weight.size(0)):\n",
+    "            ub = layer.bias.data[neuron_idx]\n",
+    "            lb = layer.bias.data[neuron_idx]\n",
+    "            lin_expr = layer.bias.data[neuron_idx]\n",
+    "            for prev_neuron_idx in range(layer.weight.size(1)):\n",
+    "                coeff = layer.weight.data[neuron_idx, prev_neuron_idx]\n",
+    "                if coeff >= 0:\n",
+    "                    ub += coeff*self.upper_bounds[-1][prev_neuron_idx]\n",
+    "                    lb += coeff*self.lower_bounds[-1][prev_neuron_idx]\n",
+    "                else:\n",
+    "                    ub += coeff*self.lower_bounds[-1][prev_neuron_idx]\n",
+    "                    lb += coeff*self.upper_bounds[-1][prev_neuron_idx]\n",
+    "                lin_expr += coeff * self.gurobi_vars[-1][prev_neuron_idx]\n",
+    "            v = self.model.addVar(lb=lb, ub=ub, obj=0,\n",
+    "                                  vtype=grb.GRB.CONTINUOUS,\n",
+    "                                  name=f'lay{layer_idx}_{neuron_idx}')\n",
+    "            self.model.addConstr(v == lin_expr)\n",
+    "            self.model.update()\n",
+    "\n",
+    "            self.model.setObjective(v, grb.GRB.MINIMIZE)\n",
+    "            self.model.optimize()\n",
+    "            assert self.model.status == 2, \"LP wasn't optimally solved\"\n",
+    "            # We have computed a lower bound\n",
+    "            lb = v.X\n",
+    "            v.lb = lb\n",
+    "\n",
+    "            # Let's now compute an upper bound\n",
+    "            self.model.setObjective(v, grb.GRB.MAXIMIZE)\n",
+    "            self.model.update()\n",
+    "            self.model.reset()\n",
+    "            self.model.optimize()\n",
+    "            assert self.model.status == 2, \"LP wasn't optimally solved\"\n",
+    "            ub = v.X\n",
+    "            v.ub = ub\n",
+    "\n",
+    "            new_layer_lb.append(lb)\n",
+    "            new_layer_ub.append(ub)\n",
+    "            new_layer_gurobi_vars.append(v)\n",
+    "    elif type(layer) == nn.ReLU:\n",
+    "        for neuron_idx, pre_var in enumerate(self.gurobi_vars[-1]):\n",
+    "            pre_lb = self.lower_bounds[-1][neuron_idx]\n",
+    "            pre_ub = self.upper_bounds[-1][neuron_idx]\n",
+    "\n",
+    "            v = self.model.addVar(lb=max(0, pre_lb),\n",
+    "                                  ub=max(0, pre_ub),\n",
+    "                                  obj=0,\n",
+    "                                  vtype=grb.GRB.CONTINUOUS,\n",
+    "                                  name=f'ReLU{layer_idx}_{neuron_idx}')\n",
+    "            if pre_lb >= 0 and pre_ub >= 0:\n",
+    "                # The ReLU is always passing\n",
+    "                self.model.addConstr(v == pre_var)\n",
+    "                lb = pre_lb\n",
+    "                ub = pre_ub\n",
+    "            elif pre_lb <= 0 and pre_ub <= 0:\n",
+    "                lb = 0\n",
+    "                ub = 0\n",
+    "                # No need to add an additional constraint that v==0\n",
+    "                # because this will be covered by the bounds we set on\n",
+    "                # the value of v.\n",
+    "            else:\n",
+    "                lb = 0\n",
+    "                ub = pre_ub\n",
+    "                self.model.addConstr(v >= pre_var)\n",
+    "\n",
+    "                slope = pre_ub / (pre_ub - pre_lb)\n",
+    "                bias = - pre_lb * slope\n",
+    "                self.model.addConstr(v <= slope * pre_var + bias)\n",
+    "\n",
+    "            new_layer_lb.append(lb)\n",
+    "            new_layer_ub.append(ub)\n",
+    "            new_layer_gurobi_vars.append(v)\n",
+    "    elif type(layer) == nn.MaxPool1d:\n",
+    "        assert layer.padding == 0, \"Non supported Maxpool option\"\n",
+    "        assert layer.dilation == 1, \"Non supported MaxPool option\"\n",
+    "        nb_pre = len(self.gurobi_vars[-1])\n",
+    "        window_size = layer.kernel_size\n",
+    "        stride = layer.stride\n",
+    "\n",
+    "        pre_start_idx = 0\n",
+    "        pre_window_end = pre_start_idx + window_size\n",
+    "\n",
+    "        while pre_window_end <= nb_pre:\n",
+    "            lb = max(self.lower_bounds[-1][pre_start_idx:pre_window_end])\n",
+    "            ub = max(self.upper_bounds[-1][pre_start_idx:pre_window_end])\n",
+    "\n",
+    "            neuron_idx = pre_start_idx // stride\n",
+    "\n",
+    "            v = self.model.addVar(lb=lb, ub=ub, obj=0, vtype=grb.GRB.CONTINUOUS,\n",
+    "                                  name=f'Maxpool{layer_idx}_{neuron_idx}')\n",
+    "            all_pre_var = 0\n",
+    "            for pre_var in self.gurobi_vars[-1][pre_start_idx:pre_window_end]:\n",
+    "                self.model.addConstr(v >= pre_var)\n",
+    "                all_pre_var += pre_var\n",
+    "            all_lb = sum(self.lower_bounds[-1][pre_start_idx:pre_window_end])\n",
+    "            max_pre_lb = lb\n",
+    "            self.model.addConstr(all_pre_var >= v + all_lb - max_pre_lb)\n",
+    "\n",
+    "            pre_start_idx += stride\n",
+    "            pre_window_end = pre_start_idx + window_size\n",
+    "\n",
+    "            new_layer_lb.append(lb)\n",
+    "            new_layer_ub.append(ub)\n",
+    "            new_layer_gurobi_vars.append(v)\n",
+    "    elif type(layer) == View:\n",
+    "        continue\n",
+    "    else:\n",
+    "        raise NotImplementedError\n",
+    "\n",
+    "    self.lower_bounds.append(new_layer_lb)\n",
+    "    self.upper_bounds.append(new_layer_ub)\n",
+    "    self.gurobi_vars.append(new_layer_gurobi_vars)\n",
+    "\n",
+    "    layer_idx += 1\n",
+    "\n",
+    "# Assert that this is as expected a network with a single output\n",
+    "assert len(self.gurobi_vars[-1]) == 1, \"Network doesn't have scalar output\"\n",
+    "\n",
+    "self.model.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(data.size())\n",
     "true_class=torch.argmax(model(data.cuda()),dim=1)\n",
@@ -412,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
